# microsoft-teams-cli

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  TESTING.md  config.example.yaml  pyproject.toml
.agents/skills/teams-cli/: SKILL.md
.claude/skills/teams-cli/: SKILL.md
teams_cli/: anti_detection.py  auth.py  cli.py  client.py  config.py  constants.py  exceptions.py  formatter.py  models.py  scheduler.py  serialization.py
teams_cli/commands/: __init__.py  _common.py  attachments.py  auth.py  chat.py  group_chat.py  mark_read.py  meetings.py  message_manage.py  presence.py  reactions.py  schedule.py  search.py  send.py  summary.py  teams_channels.py
tests/: conftest.py  test_auth.py  test_backlog_p0_core.py  test_backlog_p1_support_cli.py  test_backlog_p2_regressions.py  test_cli_allowlist.py  test_cli_chat.py  test_cli_exit_codes.py  test_cli_global_safety.py  test_cli_group_chat.py  test_cli_message_manage.py  test_cli_reactions_multi.py  test_cli_schedule.py  test_cli_search.py  test_cli_send.py  test_cli_teams.py  test_client_id_map.py  test_client_retry.py  test_client_search_and_attachments.py  test_client_send_payload.py  test_formatter.py  test_live_smoke.py  test_login_with_token.py  test_meetings.py  test_scheduler.py
